--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,18 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Teaching
+    url: '#teachingexperience'
+    weight: 20  
   - name: Publications
     url: '#featured'
-    weight: 20
+    weight: 30
   - name: Contact
     url: '#contact'
-    weight: 30
+    weight: 40
   - name: CV
     url:: uploads/resume.pdf
-    weight: 40
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
